feat(WAF): deploy new page

--- a/WAF/index.html
+++ b/WAF/index.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="./assets/favicon.17e50649.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite App</title>
-    <script type="module" crossorigin src="./assets/index.625fd376.js"></script>
-    <link rel="stylesheet" href="./assets/index.f2108981.css">
+    <title>Weibo-Analyse</title>
+    <script type="module" crossorigin src="./assets/index.25dd0b28.js"></script>
+    <link rel="stylesheet" href="./assets/index.619e3aae.css">
   </head>
   <body>
     <div id="root"></div>
